Fix spacing between hero buttons

--- a/themes/infection/source/css/index.styl
+++ b/themes/infection/source/css/index.styl
@@ -57,8 +57,9 @@ body
         font-size 1.05em
         font-weight 600
         letter-spacing .1em
-        &:first-child
-            margin-right 1em
+        margin-right 1em
+        &:last-child
+            margin-right 0
     .social-buttons
         list-style-type none
         padding 0
